--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-modal": "^10.0.0",
     "react-navigation": "^3.8.1",
     "realm": "^2.26.1"
   },
